fix gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,7 +18,7 @@
     padding: .5rem;
 }
 .card-line{
-    padding: .3rem;
+    padding-bottom: .3rem !important;
 }
 #secondary-panel{
     min-height: 4rem;
